Refactor the code and make more tests